[package]
name = "nss-certdata-parser"
version = "0.6.2"
authors = ["Jed Davis <jld@mozilla.com>"]
description = "Parser for the certdata.txt file from NSS which holds the Mozilla CA Certificate Store"
repository = "https://github.com/jld/nss-certdata-parser"
license = "MPL-2.0"

[dependencies]
nom = {version = "^2.0", features = ["verbose-errors"]}
quick-error = "1.1.0"
